# RocketClient

./: Cargo.toml  LICENSE
src/: auth.rs  main.rs  minecraft_server.rs
src/protocol/: client.rs  connection.rs  mod.rs  packets.rs  server.rs  version.rs
src/protocol/packets/: mod.rs
