[package]
name = "RocketClient"
version = "0.1.0"
edition = "2021"

[dependencies]
flate2 = "1.0"
sha1 = "0.11.0-pre.4"
num-bigint = "0.4"
num-traits = "0.2"
rand = "0.9.0"
cfb8 = "0.8.0"
aes = "0.8.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
